@@ -1,0 +1,3 @@
+GnomeUIInfo     Gnome2::UIInfo
+time_t          a timestamp
+Gnome2PerlIconListFlags  Gnome2::IconListFlags
